--- a/ExploreGinas.ipynb
+++ b/ExploreGinas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TransMed Translator is using Ginas data as a test bedsince none of the groups has ingested it yet.\n",
+    "TransMed Translator is using Ginas data as a testbed since none of the groups had ingested it yet.\n",
     "\n",
     "see:  \n",
     "https://github.com/NCATS-Tangerine/ncats-ingest/issues/1\n",
@@ -12,23 +12,26 @@
     "The best source for the data to date is found at:  \n",
     "https://tripod.nih.gov/ginas/#/gsrs/data\n",
     "\n",
-    "(commented out after first fetch)"
+    " \n",
+    "this  notebook does assume `jq` is installed  \n",
+    "https://stedolan.github.io/jq/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# commented out after first fetch \n",
     "# wget -q --timestamping https://tripod.nih.gov/ginas/gsrs/fullSeedData-2016-06-16.gsrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -37,21 +40,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 91M\n",
-      "-rw-r--r-- 1 tomc tomc  407 Dec 12 14:14 200161212_ingest_call.txt\n",
-      "-rw-r--r-- 1 tomc tomc  338 Jan  4 13:04 20170104_recap_call.txt\n",
-      "-rw-r--r-- 1 tomc tomc  91M Aug 12 12:37 fullSeedData-2016-06-16.gsrs\n",
-      "-rw-r--r-- 1 tomc tomc 1.5K Jan 11 19:36 Untitled.ipynb\n"
+      "-rw-r--r-- 1 tomc tomc 91M Aug 12 12:37 fullSeedData-2016-06-16.gsrs\n"
      ]
     }
    ],
    "source": [
-    "ls -lh"
+    "ls -lh *.gsrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -102,12 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "make sure it is not all on one half gigabyte line before taking alook (happens)."
+    "make sure it is not all on one half gigabyte line before taking a look (happens)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +159,7 @@
    "metadata": {},
    "source": [
     " __ASIDE__  \n",
-    "Where SRS_ID is FDA's \"Substance Registration System Unique Ingrediant Identifier\"  \n",
+    "Where `SRS_UNII` is FDA's \"Substance Registration System Unique Ingrediant Identifier\"  \n",
     "The second one for example, goes to:   \n",
     "    https://fdasis.nlm.nih.gov/srs/auto/startswith/o061w4c37h\n",
     "\n",
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -294,12 +293,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Everything is displaced to the right by one with the appearence of `[ingredient]`."
+    "Everything is displaced to the right by one with the appearence of `\"[ingredient]\"`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -339,12 +338,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Appears the 5k with `[ingredient]` are the only ones with the optional flag in that location.  \n"
+    "Appears the 5k with `\"[ingredient]\"` are the only ones with the optional flag in that location.  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -434,12 +433,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "Looks like a couple of hundred lines each.\n",
     "What does a record look like?"
@@ -447,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -718,14 +715,25 @@
     "collapsed": true
    },
    "source": [
-    "parsed into ntriples with python. see: (./Parse_Ginas_json.py)[Parse_Ginas_json.py]  jupyter notebook."
+    "parsed into ntriples with python. see the `Parse_Ginas_json.py` jupyter notebook.\n",
+    "and `Ginas.py`\n",
+    "\n",
+    "I have not included any Moiety fields so far.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##############################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -753,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -762,17 +770,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3522185\n"
+      "1563311\n",
+      "1958874\n"
      ]
     }
    ],
    "source": [
-    "grep -c \"^<GINAS:\" ginas.nt"
+    "grep -c \"^<GINAS:\" ginas.nt\n",
+    "grep -c \"^<GINASREF:\" ginas.nt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output is free of duplicate statements.  \n",
+    "\n",
+    "What predicates are there and how many of each?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -785,7 +804,7 @@
       " 649506 <reference_docType:>\n",
       " 649506 <reference_citation:>\n",
       " 553496 <reference_tag:>\n",
-      " 205757 <<name_references:>\n",
+      " 205757 <name_references:>\n",
       " 198471 <codes_code:>\n",
       " 113086 <structure_references:>\n",
       " 106366 <reference_url:>\n",
@@ -805,19 +824,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the predicates are a path within the JSON `record` object  \n",
+    "\n",
+    "(except `ingredient` and `unii` which are technicaly sibblings of `record`)\n",
+    "\n",
+    "\n",
+    "Those need mapping to their proper ontology terms  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "To be okay, unique object ids must not out number unique subject ids"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cut -f1 -d' ' ginas_s.nt| sort -u > ginas_subject.list"
+    "cut -f1 -d' ' ginas.nt| grep \"^<GINAS:\" |sort -u > ginas_subject.list\n",
+    "cut -f1 -d' ' ginas.nt| grep \"^<GINASREF:\" |sort -u > ginasref_subject.list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -826,28 +867,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "734485\n"
+      "84979\n",
+      "649506\n"
      ]
     }
    ],
    "source": [
-    "wc -l < ginas_subject.list"
+    "wc -l < ginas_subject.list\n",
+    "wc -l < ginasref_subject.list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cut -f3 -d' ' ginas_s.nt |grep \"^<GINAS:\" | sort -u > ginas_object.list"
+    "cut -f3 -d' ' ginas.nt |grep \"^<GINAS:\" | sort -u > ginas_object.list\n",
+    "cut -f3 -d' ' ginas.nt |grep \"^<GINASREF:\" | sort -u > ginasref_object.list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -856,17 +900,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "656364\n"
+      "6858\n",
+      "649506\n"
      ]
     }
    ],
    "source": [
-    "wc -l < ginas_object.list"
+    "wc -l < ginas_object.list\n",
+    "wc -l < ginasref_object.list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay so far"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -879,11 +932,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No output means all objects exist as subjects which is good.  \n",
-    "\n",
-    "It may be I should split the GINAS: curie into substance and reference  \n",
-    "\n"
+    "No output means all objects exist as subjects which is good.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "comm -13 ginasref_subject.list ginasref_object.list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
