--- a/ExploreGinas.ipynb
+++ b/ExploreGinas.ipynb
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -790,13 +790,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1563311\n",
+      "1365510\n",
       "1958874\n"
      ]
     }
    ],
    "source": [
-    "grep -c \"^<GINAS:\" ginas.nt\n",
+    "grep -c \"^<UNII:\" ginas.nt\n",
     "grep -c \"^<GINASREF:\" ginas.nt"
    ]
   },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -820,22 +820,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 649506 <reference_uuid:>\n",
-      " 649506 <reference_docType:>\n",
-      " 649506 <reference_citation:>\n",
-      " 553496 <reference_tag:>\n",
-      " 205757 <name_references:>\n",
-      " 198471 <codes_code:>\n",
-      " 113086 <structure_references:>\n",
-      " 106366 <reference_url:>\n",
-      "  84979 <unii:>\n",
-      "  84979 <substanceClass:>\n",
-      "  84977 <names_stdName:>\n",
-      "  70718 <code_references:>\n",
-      "  56543 <structure_formula:>\n",
-      "   7437 <mixture_component_substance:>\n",
-      "   4933 <ingredient:>\n",
-      "   1925 <mixture_component_type:>\n"
+      " 649506 <GINAS:reference_uuid>\n",
+      " 649506 <GINAS:reference_docType>\n",
+      " 649506 <GINAS:reference_citation>\n",
+      " 553496 <GINAS:reference_tag>\n",
+      " 198471 <GINAS:codes_code>\n",
+      " 113086 <GINAS:structure_references>\n",
+      " 106366 <GINAS:reference_url>\n",
+      "  84979 <GINAS:uuid>\n",
+      "  84979 <GINAS:substanceClass>\n",
+      "  84977 <rdfs:label>\n",
+      "  70718 <GINAS:code_references>\n",
+      "  56543 <GINAS:structure_formula>\n",
+      "  52852 <CHEBI:InChIKey>\n",
+      "  52852 .\n",
+      "   7437 <GINAS:mixture_component_substance>\n",
+      "   1925 <GINAS:mixture_component_type>\n"
      ]
     }
    ],
@@ -866,19 +866,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cut -f1 -d' ' ginas.nt| grep \"^<GINAS:\" |sort -u > ginas_subject.list\n",
-    "cut -f1 -d' ' ginas.nt| grep \"^<GINASREF:\" |sort -u > ginasref_subject.list"
+    "cut -f1 -d' ' ginas.nt| grep \"^<UNII:\" |sort -u > ginas_subject.list\n",
+    "cut -f1 -d' ' ginas.nt| grep \"^<GINASREF:\" |sort -u > ginasref_subject.list\n",
+    "cut -f1 -d' ' ginas.nt| grep \"^<cite:\" |sort -u > ginascite_subject.list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -887,31 +888,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "84979\n",
-      "649506\n"
+      "80046\n",
+      "649506\n",
+      "4933\n"
      ]
     }
    ],
    "source": [
     "wc -l < ginas_subject.list\n",
-    "wc -l < ginasref_subject.list"
+    "wc -l < ginasref_subject.list\n",
+    "wc -l < ginascite_subject.list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "cut -f3 -d' ' ginas.nt |grep \"^<GINAS:\" | sort -u > ginas_object.list\n",
-    "cut -f3 -d' ' ginas.nt |grep \"^<GINASREF:\" | sort -u > ginasref_object.list"
+    "cut -f3 -d' ' ginas.nt | grep \"^<UNII:\" | sort -u > ginas_object.list\n",
+    "cut -f3 -d' ' ginas.nt | grep \"^<GINASREF:\" | sort -u > ginasref_object.list\n",
+    "cut -f3 -d' ' ginas.nt | grep \"^<cite:\" | sort -u > ginascite_object.list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -921,13 +925,15 @@
      "output_type": "stream",
      "text": [
       "6858\n",
-      "649506\n"
+      "649506\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "wc -l < ginas_object.list\n",
-    "wc -l < ginasref_object.list"
+    "wc -l < ginasref_object.list\n",
+    "wc -l < ginascite_object.list"
    ]
   },
   {
@@ -974,6 +980,75 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  59232 CAS\n",
+      "  20967 ECHA (EC/EINECS)\n",
+      "  15680 MERCK INDEX\n",
+      "  12786 NCI_THESAURUS\n",
+      "  10870 MESH\n",
+      "  10068 RXCUI\n",
+      "   8874 INN\n",
+      "   7750 WIKIPEDIA\n",
+      "   5882 NCBI TAXONOMY\n",
+      "   5475 EVMPD\n",
+      "   5286 NDF-RT\n",
+      "   4746 WHO-VATC\n",
+      "   4569 ITIS\n",
+      "   4525 WHO-ATC\n",
+      "   3333 GRIN\n",
+      "   2859 EPA PESTICIDE CODE\n",
+      "   2563 USDA PLANTS\n",
+      "   2330 CFR\n",
+      "   1920 DRUG BANK\n",
+      "   1902 JECFA EVALUATION\n",
+      "   1354 EMA ASSESSMENT REPORTS\n",
+      "   1228 IUPHAR\n",
+      "   1041 LIVERTOX\n",
+      "    696 Food Contact Sustance Notif, (FCN No.)\n",
+      "    473 DEA NO.\n",
+      "    448 WHO INTERNATIONAL PHARMACPOEIA\n",
+      "    423 WHO-ESSENTIAL MEDICINES LIST\n",
+      "    321 CODEX ALIMENTARIUS (GSFA)\n",
+      "    306 JECFA MONOGRAPH\n",
+      "    102 USP-MC MONOGRAPH\n",
+      "     96 PUBCHEM\n",
+      "     83 UNIPROT\n",
+      "     55 USP-MC VALIDATION RPT\n",
+      "     47 CFSAN PSEUDO CAS\n",
+      "     39 EC SCIENTIFIC COMMITTEE ON CONSUMER SAFETY OPINION\n",
+      "     30 MANUFACTURER PRODUCT INFORMATION\n",
+      "     26 INCB IDS CODE\n",
+      "     23 UCSF-FDA TRANSPORTAL\n",
+      "     15 WEB RESOURCE\n",
+      "     13 NDFRT-PE\n",
+      "     13 EU FOOD ADDITIVES\n",
+      "      9 EC (ENZYME CLASS)\n",
+      "      3 CLINICAL_TRIALS.GOV\n",
+      "      2 CHEBI\n",
+      "      2 BIOLOGIC SUBSTANCE CLASSIFICATION CODE\n",
+      "      1 JMPR-PESTICIDE RESIDUE\n",
+      "      1 INS\n",
+      "      1 HEALTH-CANADA NHP INGREDIENT RECORD\n",
+      "      1 HEALTH -CANADA NHP INGREDIENT MONOGRAPH\n",
+      "      1 COSMETIC INGREDIENT REVIEW (CIR)\n",
+      "      1 ALANWOOD\n"
+     ]
+    }
+   ],
+   "source": [
+    "grep \"> <GINAS:codes_code> <\" ginas.nt | cut -f3- -d ' ' | cut -f1 -d \\: | tr -d \\< |  sort | uniq -c | sort -nr\n"
+   ]
   }
  ],
  "metadata": {
