preserving a fairly coherent rant

--- a/ExploreGinasTriples.ipynb
+++ b/ExploreGinasTriples.ipynb
@@ -5354,7 +5354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -5471,6 +5471,161 @@
    ],
    "source": [
     "jq '.[][].relationships[].type' fullSeedData-2016-06-16_records.json | sort | uniq -c | sort -nr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the CuriePrefixes in use?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1675642 <UNII\n",
+      " 755872 <GINASREF\n",
+      "  45214 <cite\n",
+      "\n",
+      "2232533 <GINAS\n",
+      " 106366 <OIO\n",
+      "  84977 <rdfs\n",
+      "  52852 <CHEBI\n"
+     ]
+    }
+   ],
+   "source": [
+    "cut -f1 -d' ' ginas.nt | cut -f1 -d\\: | sort | uniq -c | sort -nr\n",
+    "echo \"\"\n",
+    "cut -f2 -d' ' ginas.nt | cut -f1 -d\\: | sort | uniq -c | sort -nr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "finding Object curie prefixs will be less realiable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 720224 <GINASREF\n",
+      " 103454 <http\n",
+      "  96545 <UNII\n",
+      "  59232 <CAS\n",
+      "  20967 <ECHA (EC/EINECS)\n",
+      "  15680 <MERCK INDEX\n",
+      "  12786 <NCI_THESAURUS\n",
+      "  10870 <MESH\n",
+      "  10068 <RXCUI\n",
+      "   8874 <INN\n",
+      "   7750 <WIKIPEDIA\n",
+      "   5882 <NCBI TAXONOMY\n",
+      "   5475 <EVMPD\n",
+      "   5286 <NDF-RT\n",
+      "   4746 <WHO-VATC\n",
+      "   4569 <ITIS\n",
+      "   4525 <WHO-ATC\n",
+      "   3333 <GRIN\n",
+      "   2857 <EPA PESTICIDE CODE\n",
+      "   2563 <USDA PLANTS\n",
+      "   2330 <CFR\n",
+      "   1920 <DRUG BANK\n",
+      "   1902 <JECFA EVALUATION\n",
+      "   1354 <EMA ASSESSMENT REPORTS\n",
+      "   1228 <IUPHAR\n"
+     ]
+    }
+   ],
+   "source": [
+    "cut -f3- -d' ' ginas.nt | grep \"^<\" | cut -f1 -d\\: | sort | uniq -c | sort -nr | head -25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Those are worth looking into bur first, required resources: \n",
+    "\n",
+    "1) A source specific translation table that maps external strings into internal strings  \n",
+    "e.g. they say `NCBI TAXONOMY` we say `NCBITaxon`\n",
+    "\n",
+    "2) A common mapping of short to long form prefixs or bases. That is, a file with the namespace or CURIE prefix mapped the the constant base portion of an IRI e.g.   `CAS\thttp://www.cas-no.org/`  \n",
+    "\n",
+    "These first two are related in that every? element in the second column of the first mapping occurs as an element in the first column of the second mapping (a namepace).  \n",
+    "(I question _every_ b/c we may use this mechinism to normalize non ontoligical strings as well) \n",
+    "\n",
+    "3) A common mapping of human friendly labels to machine oriented terms per namespace\n",
+    "    e.g. `'RO:member_of' RO:0002350`\n",
+    "\n",
+    "Where the first column is a string a programmer can reason about when they are creating or maintaining code. And the second is the CURIE for the ontological term being that will be included in the output. (the `namespace:label` will _not_ be emitted)  \n",
+    "\n",
+    "some notes:  \n",
+    "\n",
+    "i)  Including the namespace with the label is important because there are no constraints on what various ontologists lable things (including terms from different ontologies) so be selective when adopting a lable, favor the canonical source for a term.\n",
+    "\n",
+    "ii) Labels may contain spaces and other identifier unfriendly aspects. Feedback pressure to keep them as sane as reasonable is a community service.\n",
+    "\n",
+    "iii) Labels are apt to change more often than the underlying term, checking them before use is prudent.\n",
+    "\n",
+    "--- \n",
+    "\n",
+    "Here we have enough information to structure and emit our data as Resource Discription Framework (RDF) triples anotated with ontological terms.\n",
+    "\n",
+    "\n",
+    "However to be a valid Web Ontology Language (OWL) representation the ontological terms need to be typed.\n",
+    "\n",
+    "To my limited understanding, OWL can be represented a Directed Acyclic Graph (DAG) of RDF. Even if OWL itself is not constrained to be DAGs, usefully computable instances should not be more connected than a DAG.  All DAGs may be represented as a set of overlapping trees (hirearchies) with distinct roots but possible common internal and leaf nodes. \n",
+    "\n",
+    "When we annotate our data with an ontological term we also have to specify the root of the hirearchy we want the term to be considered part of incase it could be part of several. This matters when the OWL file is being reasoned over.  \n",
+    "\n",
+    "There are severrial possible cases \n",
+    ". the term is only within one hirearchy in which case the typing is moot (but still necessary). \n",
+    ". The term is in multiple hirearchies but we only use it in one way in which case a common `term->type` mapping file is needed.\n",
+    "\n",
+    ". The term is in multiple hirearchies and we use differently with different datasets in which case source specific `term->type` mapping file is needed.\n",
+    "\n",
+    ". The term is in multiple hirearchies and we use differently within the same dataset in which case I might argue they should be different terms. prehaps by altering the namespace (but may muck up alot of nice consistency propertied we aught be checking).\n",
+    "\n",
+    "made up example:\n",
+    "\n",
+    "    WAG:whatever  WAG:abc123\n",
+    "    SWAG:whatever SWAG:abc123\n",
+    "\n",
+    "where in the CuriePrefix_IRIPrefix mappinile both namespaceswould map the the sme base IRI\n",
+    "\n",
+    "    WAG  http://example.org/\n",
+    "    SWAG http://example.org/\n",
+    "\n",
+    "We could then globaly type the terms\n",
+    "\n",
+    "    WAG:abc123  owl:turnip\n",
+    "    SWAG:abc123 owl:rutabegga\n",
+    "\n",
+    "In all these cases we are able to isolate the OWL type metadata which will be used in concert with many other sources to extrapolate novle statements   \n",
+    "from the statments _this_ source explicitly asserts which is an excellent property when we want to establish consistancy and correctness of this source.\n",
+    "\n",
+    "\n",
+    "The least good option (and our current practice) is to hardcode the type with each term usage.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
