--- a/ExploreGinasTriples.ipynb
+++ b/ExploreGinasTriples.ipynb
@@ -601,13 +601,14 @@
     "1) A source specific translation table that maps external strings into internal strings  \n",
     "e.g. they say `NCBI TAXONOMY` we say `NCBITaxon`\n",
     "\n",
-    "2) A common mapping of short to long form prefixs or bases. That is, a file with the namespace or CURIE prefix mapped the the constant base portion of an IRI e.g.   `CAS\thttp://www.cas-no.org/`  \n",
+    "2) A common mapping of short to long form prefixs or bases. That is, a file with the namespace or CURIE prefix mapped the the constant base portion of an IRI  \n",
+    "e.g.   `CAS\thttp://www.cas-no.org/`  \n",
     "\n",
     "These first two are related in that every? element in the second column of the first mapping occurs as an element in the first column of the second mapping (a namepace).  \n",
     "(I question _every_ b/c we may use this mechinism to normalize non ontoligical strings as well) \n",
     "\n",
-    "3) A common mapping of human friendly labels to machine oriented terms per namespace\n",
-    "    e.g. `'RO:member_of' RO:0002350`\n",
+    "3) A common mapping of human friendly labels to machine oriented terms per namespace  \n",
+    "e.g. `'RO:member_of' RO:0002350`\n",
     "\n",
     "Where the first column is a string a programmer can reason about when they are creating or maintaining code. And the second is the CURIE for the ontological term being that will be included in the output. (the `namespace:label` will _not_ be emitted)  \n",
     "\n",
@@ -659,6 +660,8 @@
     "\n",
     "The least good option (and our current practice) is to hardcode the type with each term usage.\n",
     "\n",
+    "\n",
+    "TODO: cleanup spellcheck\n",
     "\n"
    ]
   }
