--- a/ExploreGinasTriples.ipynb
+++ b/ExploreGinasTriples.ipynb
@@ -599,7 +599,7 @@
     "Those are worth looking into but first, required resources: \n",
     "\n",
     "1) A source specific translation table that maps external strings into internal strings  \n",
-    "e.g. they say `NCBI TAXONOMY` we say `NCBITaxon`\n",
+    "e.g. they say `NCBI TAXONOMY` we say `NCBITaxon`  \n",
     "\n",
     "2) A common mapping of short to long form prefixs or bases. That is, a file with the namespace or CURIE prefix mapped the the constant base portion of an IRI  \n",
     "e.g.   `CAS\thttp://www.cas-no.org/`  \n",
@@ -608,7 +608,7 @@
     "(I question _every_ b/c we may use this mechinism to normalize non ontoligical strings as well) \n",
     "\n",
     "3) A common mapping of human friendly labels to machine oriented terms per namespace  \n",
-    "e.g. `'RO:member_of' RO:0002350`\n",
+    "e.g. `'RO:member_of' RO:0002350`  \n",
     "\n",
     "Where the first column is a string a programmer can reason about when they are creating or maintaining code. And the second is the CURIE for the ontological term being that will be included in the output. (the `namespace:label` will _not_ be emitted)  \n",
     "\n",
@@ -625,45 +625,73 @@
     "Here we have enough information to structure and emit our data as Resource Discription Framework (RDF) triples anotated with ontological terms.\n",
     "\n",
     "\n",
-    "However to be a valid Web Ontology Language (OWL) representation the ontological terms need to be typed.\n",
+    "However to be a valid Web Ontology Language (OWL) representation the ontological terms reportedly need to be typed.\n",
     "\n",
     "To my limited understanding, OWL can be represented a Directed Acyclic Graph (DAG) of RDF. Even if OWL itself is not constrained to be DAGs, usefully computable instances should not be more connected than a DAG.  All DAGs may be represented as a set of overlapping trees (hirearchies) with distinct roots but possible common internal and leaf nodes. \n",
     "\n",
-    "When we annotate our data with an ontological term we also have to specify the root of the hirearchy we want the term to be considered part of incase it could be part of several. This matters when the OWL file is being reasoned over.  \n",
+    "When we annotate our data with an ontological term we also have to specify the root of the hirearchy we want the term to be considered part of in case it could be part of several. This matters when the OWL file is being reasoned over.  \n",
     "\n",
-    "There are severrial possible cases \n",
-    ". the term is only within one hirearchy in which case the typing is moot (but still necessary). \n",
-    ". The term is in multiple hirearchies but we only use it in one way in which case a common `term->type` mapping file is needed.\n",
-    "\n",
-    ". The term is in multiple hirearchies and we use differently with different datasets in which case source specific `term->type` mapping file is needed.\n",
-    "\n",
-    ". The term is in multiple hirearchies and we use differently within the same dataset in which case I might argue they should be different terms. prehaps by altering the namespace (but may muck up alot of nice consistency propertied we aught be checking).\n",
-    "\n",
-    "made up example:\n",
-    "\n",
-    "    WAG:whatever  WAG:abc123\n",
-    "    SWAG:whatever SWAG:abc123\n",
-    "\n",
-    "where in the CuriePrefix_IRIPrefix mappinile both namespaceswould map the the sme base IRI\n",
-    "\n",
-    "    WAG  http://example.org/\n",
-    "    SWAG http://example.org/\n",
-    "\n",
-    "We could then globaly type the terms\n",
-    "\n",
-    "    WAG:abc123  owl:turnip\n",
-    "    SWAG:abc123 owl:rutabegga\n",
-    "\n",
-    "In all these cases we are able to isolate the OWL type metadata which will be used in concert with many other sources to extrapolate novle statements   \n",
-    "from the statments _this_ source explicitly asserts which is an excellent property when we want to establish consistancy and correctness of this source.\n",
+    "( Update! apparently valid OWL files do not allow terms to share classes... I am checking.)  \n",
     "\n",
     "\n",
-    "The least good option (and our current practice) is to hardcode the type with each term usage.\n",
     "\n",
+    "There are several possible cases:  \n",
+    "\n",
+    ". the term is only within one hirearchy in which case the typing is moot (but still necessary).  \n",
+    "\n",
+    ". The term is in multiple hirearchies but we only use it in one way in which case a common `term->type` mapping file is needed.  \n",
+    "\n",
+    ". The term is in multiple hirearchies and we use differently with different datasets in which case source specific `term->type` mapping file is needed.  \n",
+    "\n",
+    ". The term is in multiple hirearchies and we use differently within the same dataset in which case I might argue they should be different terms. prehaps by altering the namespace (but may muck up alot of nice consistency propertied we aught be checking).  \n",
+    "\n",
+    "made up example:  \n",
+    "\n",
+    "    WAG:whatever  WAG:02BR  \n",
+    "    SWAG:whatever SWAG:02BR  \n",
+    "\n",
+    "where in the `CuriePrefix_IRIPrefix` mapping file both namespaces would map the the same base IRI  \n",
+    "\n",
+    "    WAG  http://example.org/  \n",
+    "    SWAG http://example.org/  \n",
+    "\n",
+    "We could then globaly type the terms  \n",
+    "\n",
+    "    WAG:02BR  owl:turnip  \n",
+    "    SWAG:02BR owl:rutabegga  \n",
+    "\n",
+    "Which would get all `WAG:whatever` as `owl:turip`s  \n",
+    "\n",
+    "In all these cases we are able to isolate the OWL type metadata which will be used in concert with many other sources to extrapolate novel statements   \n",
+    "from the statments _this_ source explicitly asserts which is an excellent property to maintain when we want to establish consistancy and correctness of _this_ source.  \n",
+    "\n",
+    "\n",
+    "The least good option (and our current practice) is to hardcode the type with each term usage.  \n",
+    "\n",
+    "To OWL-ify a dataset annotated with ontological terms, the most general owl statements could be introduced st the golbal level.  \n",
+    "\n",
+    "All items in namespace `FOO` are of type `owl:BAR`  \n",
+    "\n",
+    "dataset level:  \n",
+    "In this dataset items in namespace `FOO` are of type `owl:BAR`  \n",
+    "\n",
+    "At a term level  WAG:02BR  \n",
+    "\n",
+    "or individualy. \n",
+    "I really want someone to prove this is necessary before continuing this way.\n",
     "\n",
     "TODO: cleanup spellcheck\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
